--- a/little-lemon/public/index.html
+++ b/little-lemon/public/index.html
@@ -7,8 +7,14 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="We are a family-owned restaurant serving simple food and classic cocktails in a lively but casual environment "
     />
+    <meta name="og:title" content="Little Lemon" />
+    <meta
+      name="og:description"
+      content="We are a family-owned restaurant serving simple food and classic cocktails in a lively but casual environment"
+    />
+    <meta name="og:image" content="../assets/restaurantfood.jpg" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +30,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Little Lemon Restaurant</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
